Implement paddle selection

--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
 					</div>
 				</div>
 			</div>
+			<div class="multiplayer">
+				<div class="multiplayer-title">Choose paddle</div>
+				<div class="multiplayer-sides">
+					<div class="sides">
+						<div id="multiplayer-green">Green</div>
+					</div>
+					<div class="sides">
+						<div id="multiplayer-blue">Blue</div>
+					</div>
+				</div>
+			</div>
 			<div class="results">
 				<div class="results-title">You win!</div>
 				<div class="results-scores">
@@ -63,6 +74,7 @@
 			</div>
 		</div>
 
+		<script src="/socket.io/socket.io.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/2.0.5/velocity.min.js"></script> -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.2/velocity.min.js"></script>
@@ -76,6 +88,7 @@
 		<script src="js/paddle.js"></script>
 		<script src="js/ball.js"></script>
 		<script src="js/particles.js"></script>
+		<script src="js/io.js"></script>
 		<script src="js/game.js"></script>
 	</body>
 </html>
